Score image overlap almost ready. Just needs to be positioned in the correct spot.

--- a/src/features/userPost/userpost.module.css
+++ b/src/features/userPost/userpost.module.css
@@ -40,13 +40,30 @@
 }
 
 .score {
-    font-size: 2rem;
+    text-align: right;
     z-index: 2;
     position: relative;
     display: block;
     top: 0;
     left: 0;
-    border: 1px solid green;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    width: fit-content;
+    font-size: 1.5rem;
+    padding: .5rem 1rem;
+    padding-right: 50px;
+}
+
+.scoreArrows {
+    position: absolute;
+    display: block;
+    right: 0;
+    top: 0;
+    padding-top: 2.25rem;
+    padding-right: 1.6rem;
 }
 
 .postInfo {
